adicionei um paragrafo

--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -10,5 +10,6 @@
   <h1>Olá, Mundo</h1>  
   <hr>
   <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Adipisci tempore neque quam iusto, placeat ad vitae quaerat reprehenderit ratione dolorem nihil eum animi harum pariatur voluptatum voluptas corrupti aspernatur quo.</p>
+  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam inventore quidem, asperiores laborum adipisci corrupti praesentium excepturi vitae illum voluptatem a, officia et, ipsam debitis quam iusto impedit dolorem sed!</p>
 </body>
 </html>
